Fix undefined IDs and broken thumbnails

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -51,10 +51,11 @@
     <main class="gallery-container">
         <div class="gallery-grid" id="galleryGrid">
             <!-- Card: Male Standard -->
-            <div class="card" data-category="male" onclick="openModal('male_standard')">
-                <img src="img/male_standard.png" alt="Male Standard">
+            <div class="card" data-category="male" onclick="openModal('nayuta_standard')">
+                <img src="img/nayuta_standard.png" alt="Male Standard">
                 <div class="card-info">
                     <span class="card-tag">Male Model</span>
+                    <span class="card-id">#NST-017</span>
                     <h2 class="card-title">プロフェッショナルな響き</h2>
                     <p class="card-desc">信頼感と知性を感じさせる表情。</p>
                 </div>
@@ -65,15 +66,17 @@
                 <img src="img/city_pop.jpg" alt="City Pop">
                 <div class="card-info">
                     <span class="card-tag">Retro Anime</span>
+                    <span class="card-id">#NST-016</span>
                     <h2 class="card-title">シティポップ・ドリーム</h2>
                     <p class="card-desc">80年代の風とネオンライト。</p>
                 </div>
             </div>
             <!-- Card: Male Teacher -->
-            <div class="card" data-category="male education" onclick="openModal('male_teacher')">
-                <img src="img/male_teacher.png" alt="Male Teacher">
+            <div class="card" data-category="male education" onclick="openModal('nayuta_teacher')">
+                <img src="img/nayuta_teacher.png" alt="Male Teacher">
                 <div class="card-info">
                     <span class="card-tag">Male / Education</span>
+                    <span class="card-id">#NST-018</span>
                     <h2 class="card-title">信頼の教育者</h2>
                     <p class="card-desc">親しみやすく信頼できる講師。</p>
                 </div>
@@ -174,6 +177,7 @@
                 <img src="img/anime.png" alt="Anime Style Reading Drama">
                 <div class="card-info">
                     <span class="card-tag">Anime</span>
+                    <span class="card-id">#NST-001</span>
                     <h2 class="card-title">朗読劇の情景</h2>
                     <p class="card-desc">スタジオ収録のエモーショナルな瞬間。</p>
                 </div>
@@ -184,6 +188,7 @@
                 <img src="img/anime_kids.jpg" alt="Anime Kids">
                 <div class="card-info">
                     <span class="card-tag">Anime</span>
+                    <span class="card-id">#NST-002</span>
                     <h2 class="card-title">子供たちの笑顔</h2>
                     <p class="card-desc">公園で無邪気に遊ぶ、日常の物語。</p>
                 </div>
@@ -194,6 +199,7 @@
                 <img src="img/anime_elderly.jpg" alt="Anime Elderly">
                 <div class="card-info">
                     <span class="card-tag">Anime</span>
+                    <span class="card-id">#NST-003</span>
                     <h2 class="card-title">穏やかな老後</h2>
                     <p class="card-desc">優しさに包まれた、夫婦の対話。</p>
                 </div>
@@ -204,6 +210,7 @@
                 <img src="img/photo.png" alt="Photography Style Seto Inland Sea">
                 <div class="card-info">
                     <span class="card-tag">Photography</span>
+                    <span class="card-id">#NST-004</span>
                     <h2 class="card-title">瀬戸内の夕暮れ</h2>
                     <p class="card-desc">シネマティックな空気感を捉えた風景。</p>
                 </div>
@@ -214,6 +221,7 @@
                 <img src="img/photo_artisan.png" alt="Photo Artisan">
                 <div class="card-info">
                     <span class="card-tag">Photography</span>
+                    <span class="card-id">#NST-005</span>
                     <h2 class="card-title">職人の眼差し</h2>
                     <p class="card-desc">伝統を紡ぐ、情熱のポートレート。</p>
                 </div>
@@ -224,6 +232,7 @@
                 <img src="img/photo_street_snap.jpg" alt="Photo Street Snap">
                 <div class="card-info">
                     <span class="card-tag">Photography</span>
+                    <span class="card-id">#NST-006</span>
                     <h2 class="card-title">雨上がりの静寂</h2>
                     <p class="card-desc">日常を切り取ったスナップ写真。</p>
                 </div>
@@ -234,6 +243,7 @@
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
                 <div class="card-info">
                     <span class="card-tag">Photography</span>
+                    <span class="card-id">#NST-007</span>
                     <h2 class="card-title">立ち上る湯気</h2>
                     <p class="card-desc">素材の質感に迫る、生活の温度。</p>
                 </div>
@@ -244,6 +254,7 @@
                 <img src="img/photo_bench.jpg" alt="Photo Bench">
                 <div class="card-info">
                     <span class="card-tag">Photography</span>
+                    <span class="card-id">#NST-008</span>
                     <h2 class="card-title">夕暮れの追憶</h2>
                     <p class="card-desc">フィルムが捉えた、黄金の瞬間。</p>
                 </div>
@@ -254,6 +265,7 @@
                 <img src="img/photo_woman_1.jpg" alt="Photo Woman 1">
                 <div class="card-info">
                     <span class="card-tag">Photography</span>
+                    <span class="card-id">#NST-009</span>
                     <h2 class="card-title">窓辺の光と透明感</h2>
                     <p class="card-desc">朝の光が描く、柔らかなポートレート。</p>
                 </div>
@@ -264,6 +276,7 @@
                 <img src="img/photo_woman_2.jpg" alt="Photo Woman 2">
                 <div class="card-info">
                     <span class="card-tag">Photography</span>
+                    <span class="card-id">#NST-010</span>
                     <h2 class="card-title">渋谷の鼓動</h2>
                     <p class="card-desc">フラッシュが捉えた、都会のリアリティ。</p>
                 </div>
@@ -274,6 +287,7 @@
                 <img src="img/photo_woman_3.jpg" alt="Photo Woman 3">
                 <div class="card-info">
                     <span class="card-tag">Photography</span>
+                    <span class="card-id">#NST-011</span>
                     <h2 class="card-title">雨音とモノクローム</h2>
                     <p class="card-desc">陰影が語る、静寂のポートレート。</p>
                 </div>
@@ -284,6 +298,7 @@
                 <img src="img/watercolor.png" alt="Watercolor Style Japanese House">
                 <div class="card-info">
                     <span class="card-tag">Watercolor</span>
+                    <span class="card-id">#NST-012</span>
                     <h2 class="card-title">春の縁側</h2>
                     <p class="card-desc">繊細な水彩タッチで描く、静かな四季。</p>
                 </div>
@@ -294,6 +309,7 @@
                 <img src="img/watercolor_autumn.jpg" alt="Watercolor Autumn">
                 <div class="card-info">
                     <span class="card-tag">Watercolor</span>
+                    <span class="card-id">#NST-013</span>
                     <h2 class="card-title">秋の錦鯉</h2>
                     <p class="card-desc">紅葉と石橋が織りなす、秋の静寂。</p>
                 </div>
@@ -304,6 +320,7 @@
                 <img src="img/sf_city.png" alt="SF City">
                 <div class="card-info">
                     <span class="card-tag">SF Movie</span>
+                    <span class="card-id">#NST-014</span>
                     <h2 class="card-title">不夜城の鼓動</h2>
                     <p class="card-desc">雨に濡れる未来都市の断片。</p>
                 </div>
@@ -314,6 +331,7 @@
                 <img src="img/sf_planet.png" alt="SF Planet">
                 <div class="card-info">
                     <span class="card-tag">SF Movie</span>
+                    <span class="card-id">#NST-015</span>
                     <h2 class="card-title">未知の境界線</h2>
                     <p class="card-desc">静寂に包まれた、異星の地平。</p>
                 </div>
