Rebrand to Nist Studio design and add Gadget image

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&family=Zen+Maru+Gothic:wght@400;500;700&family=Zen+Old+Mincho:wght@400;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -128,12 +130,34 @@
 
             <!-- Card: EC Product -->
             <div class="card" data-category="ec photo" onclick="openModal('ec_product')">
-                <img src="img/ec_product.png" alt="EC Product">
+                <img src="img/ec_product.png" alt="EC Product Pink">
                 <div class="card-info">
-                    <span class="card-tag">EC / Product</span>
+                    <span class="card-tag">EC / Brand</span>
                     <span class="card-id">#NST-023</span>
-                    <h2 class="card-title">プロダクトの輝き</h2>
-                    <p class="card-desc">魅力を引き出す商品写真。</p>
+                    <h2 class="card-title">プロダクトの輝き (Pink)</h2>
+                    <p class="card-desc">世界観を演出するプロップ撮影。</p>
+                </div>
+            </div>
+
+            <!-- Card: EC Product 2 -->
+            <div class="card" data-category="ec photo" onclick="openModal('ec_product_2')">
+                <img src="img/ec_product_2.png" alt="EC Product White">
+                <div class="card-info">
+                    <span class="card-tag">EC / Amazon</span>
+                    <span class="card-id">#NST-029</span>
+                    <h2 class="card-title">プロダクトの輝き (White)</h2>
+                    <p class="card-desc">白背景の王道商品写真。</p>
+                </div>
+            </div>
+
+            <!-- Card: EC Gadget -->
+            <div class="card" data-category="ec photo" onclick="openModal('ec_gadget')">
+                <img src="img/ec_gadget.png" alt="EC Gadget">
+                <div class="card-info">
+                    <span class="card-tag">EC / Tech</span>
+                    <span class="card-id">#NST-030</span>
+                    <h2 class="card-title">Tech & Style</h2>
+                    <p class="card-desc">先進性を表現するライティング。</p>
                 </div>
             </div>
 
