Add Apparel EC image

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -161,6 +161,17 @@
                 </div>
             </div>
 
+            <!-- Card: EC Apparel -->
+            <div class="card" data-category="ec photo" onclick="openModal('ec_apparel')">
+                <img src="img/ec_apparel.jpg" alt="EC Apparel">
+                <div class="card-info">
+                    <span class="card-tag">EC / Street</span>
+                    <span class="card-id">#NST-031</span>
+                    <h2 class="card-title">Street Culture</h2>
+                    <p class="card-desc">カルチャーを切り取る商品写真。</p>
+                </div>
+            </div>
+
             <!-- Card: Food -->
             <div class="card" data-category="food photo" onclick="openModal('food_restaurant')">
                 <img src="img/food_restaurant.png" alt="Food">
