Add Interior EC image and finalize assets

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -172,6 +172,17 @@
                 </div>
             </div>
 
+            <!-- Card: EC Interior -->
+            <div class="card" data-category="ec photo" onclick="openModal('ec_interior')">
+                <img src="img/ec_interior.png" alt="EC Interior">
+                <div class="card-info">
+                    <span class="card-tag">EC / Lifestyle</span>
+                    <span class="card-id">#NST-032</span>
+                    <h2 class="card-title">Organic Lifestyle</h2>
+                    <p class="card-desc">日常の豊かさを描くフォト。</p>
+                </div>
+            </div>
+
             <!-- Card: Food -->
             <div class="card" data-category="food photo" onclick="openModal('food_restaurant')">
                 <img src="img/food_restaurant.png" alt="Food">
