Add Flat Design and 3D Character assets

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -382,6 +382,28 @@
                     <p class="card-desc">静寂に包まれた、異星の地平。</p>
                 </div>
             </div>
+
+            <!-- Card: 3D Character -->
+            <div class="card" data-category="3d" onclick="openModal('3d_character')">
+                <img src="img/3d_character.png" alt="3D Character">
+                <div class="card-info">
+                    <span class="card-tag">3D Art</span>
+                    <span class="card-id">#NST-040</span>
+                    <h2 class="card-title">Friendly Robot</h2>
+                    <p class="card-desc">Pixarスタイルのキャラクター。</p>
+                </div>
+            </div>
+
+            <!-- Card: Flat Design -->
+            <div class="card" data-category="flat" onclick="openModal('flat_design')">
+                <img src="img/flat_design.png" alt="Flat Design">
+                <div class="card-info">
+                    <span class="card-tag">Flat Design</span>
+                    <span class="card-id">#NST-041</span>
+                    <h2 class="card-title">Startup Team</h2>
+                    <p class="card-desc">Tech企業向けベクターイラスト。</p>
+                </div>
+            </div>
         </div>
     </main>
 
