Add Beauty EC image

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -183,6 +183,17 @@
                 </div>
             </div>
 
+            <!-- Card: EC Beauty -->
+            <div class="card" data-category="ec photo" onclick="openModal('ec_beauty')">
+                <img src="img/ec_beauty.png" alt="EC Beauty">
+                <div class="card-info">
+                    <span class="card-tag">EC / Beauty</span>
+                    <span class="card-id">#NST-033</span>
+                    <h2 class="card-title">Clear Beauty</h2>
+                    <p class="card-desc">透明感溢れるスキンケアフォト。</p>
+                </div>
+            </div>
+
             <!-- Card: Food -->
             <div class="card" data-category="food photo" onclick="openModal('food_restaurant')">
                 <img src="img/food_restaurant.png" alt="Food">
