--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -194,6 +194,17 @@
                 </div>
             </div>
 
+            <!-- Card: EC Business -->
+            <div class="card" data-category="ec photo" onclick="openModal('ec_business')">
+                <img src="img/ec_business.png" alt="EC Business">
+                <div class="card-info">
+                    <span class="card-tag">EC / Office</span>
+                    <span class="card-id">#NST-034</span>
+                    <h2 class="card-title">Trusted Workflow</h2>
+                    <p class="card-desc">信頼を築くビジネスポートレート。</p>
+                </div>
+            </div>
+
             <!-- Card: Food -->
             <div class="card" data-category="food photo" onclick="openModal('food_restaurant')">
                 <img src="img/food_restaurant.png" alt="Food">
