Add Fashion EC image

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -205,6 +205,17 @@
                 </div>
             </div>
 
+            <!-- Card: EC Fashion -->
+            <div class="card" data-category="ec photo" onclick="openModal('ec_fashion')">
+                <img src="img/ec_fashion.jpg" alt="EC Fashion">
+                <div class="card-info">
+                    <span class="card-tag">EC / Fashion</span>
+                    <span class="card-id">#NST-035</span>
+                    <h2 class="card-title">City Walker</h2>
+                    <p class="card-desc">トレンド感のあるストリートフォト。</p>
+                </div>
+            </div>
+
             <!-- Card: Food -->
             <div class="card" data-category="food photo" onclick="openModal('food_restaurant')">
                 <img src="img/food_restaurant.png" alt="Food">
