Add Wellness EC image

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -216,6 +216,17 @@
                 </div>
             </div>
 
+            <!-- Card: EC Wellness -->
+            <div class="card" data-category="ec photo" onclick="openModal('ec_wellness')">
+                <img src="img/ec_wellness.png" alt="EC Wellness">
+                <div class="card-info">
+                    <span class="card-tag">EC / Wellness</span>
+                    <span class="card-id">#NST-036</span>
+                    <h2 class="card-title">Morning Yoga</h2>
+                    <p class="card-desc">健康美を表現するライフスタイル。</p>
+                </div>
+            </div>
+
             <!-- Card: Food -->
             <div class="card" data-category="food photo" onclick="openModal('food_restaurant')">
                 <img src="img/food_restaurant.png" alt="Food">
