Add Relax EC image and Project Specification

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -227,6 +227,17 @@
                 </div>
             </div>
 
+            <!-- Card: EC Relax -->
+            <div class="card" data-category="ec photo" onclick="openModal('ec_relax')">
+                <img src="img/ec_relax.jpg" alt="EC Relax">
+                <div class="card-info">
+                    <span class="card-tag">EC / Home</span>
+                    <span class="card-id">#NST-037</span>
+                    <h2 class="card-title">Cozy Evening</h2>
+                    <p class="card-desc">暮らしの温もりを伝える。</p>
+                </div>
+            </div>
+
             <!-- Card: Food -->
             <div class="card" data-category="food photo" onclick="openModal('food_restaurant')">
                 <img src="img/food_restaurant.png" alt="Food">
