Add LoFi YouTube BG and YouTube filter

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -46,6 +46,7 @@
                 <button class="filter-btn" data-filter="food">Food / Restaurant</button>
                 <button class="filter-btn" data-filter="music">Music</button>
                 <button class="filter-btn" data-filter="education">Education</button>
+                <button class="filter-btn" data-filter="youtube">YouTube / BG</button>
             </div>
         </div>
     </div>
@@ -184,7 +185,7 @@
             </div>
 
             <!-- Card: EC Beauty -->
-            <div class="card" data-category="ec photo" onclick="openModal('ec_beauty')">
+            <div class="card" data-category="ec photo beauty" onclick="openModal('ec_beauty')">
                 <img src="img/ec_beauty.png" alt="EC Beauty">
                 <div class="card-info">
                     <span class="card-tag">EC / Beauty</span>
@@ -195,7 +196,7 @@
             </div>
 
             <!-- Card: EC Business -->
-            <div class="card" data-category="ec photo" onclick="openModal('ec_business')">
+            <div class="card" data-category="ec photo business" onclick="openModal('ec_business')">
                 <img src="img/ec_business.png" alt="EC Business">
                 <div class="card-info">
                     <span class="card-tag">EC / Office</span>
@@ -206,7 +207,7 @@
             </div>
 
             <!-- Card: EC Fashion -->
-            <div class="card" data-category="ec photo" onclick="openModal('ec_fashion')">
+            <div class="card" data-category="ec photo fashion" onclick="openModal('ec_fashion')">
                 <img src="img/ec_fashion.jpg" alt="EC Fashion">
                 <div class="card-info">
                     <span class="card-tag">EC / Fashion</span>
@@ -217,7 +218,7 @@
             </div>
 
             <!-- Card: EC Wellness -->
-            <div class="card" data-category="ec photo" onclick="openModal('ec_wellness')">
+            <div class="card" data-category="ec photo wellness" onclick="openModal('ec_wellness')">
                 <img src="img/ec_wellness.png" alt="EC Wellness">
                 <div class="card-info">
                     <span class="card-tag">EC / Wellness</span>
@@ -228,7 +229,7 @@
             </div>
 
             <!-- Card: EC Relax -->
-            <div class="card" data-category="ec photo" onclick="openModal('ec_relax')">
+            <div class="card" data-category="ec photo relax" onclick="openModal('ec_relax')">
                 <img src="img/ec_relax.jpg" alt="EC Relax">
                 <div class="card-info">
                     <span class="card-tag">EC / Home</span>
@@ -439,7 +440,7 @@
             </div>
 
             <!-- Card: 3D Character -->
-            <div class="card" data-category="3d" onclick="openModal('3d_character')">
+            <div class="card" data-category="3d tech" onclick="openModal('3d_character')">
                 <img src="img/3d_character.png" alt="3D Character">
                 <div class="card-info">
                     <span class="card-tag">3D Art</span>
@@ -450,13 +451,24 @@
             </div>
 
             <!-- Card: Flat Design -->
-            <div class="card" data-category="flat" onclick="openModal('flat_design')">
+            <div class="card" data-category="flat tech" onclick="openModal('flat_design')">
                 <img src="img/flat_design.png" alt="Flat Design">
                 <div class="card-info">
                     <span class="card-tag">Flat Design</span>
                     <span class="card-id">#NST-041</span>
                     <h2 class="card-title">Startup Team</h2>
                     <p class="card-desc">Tech企業向けベクターイラスト。</p>
+                </div>
+            </div>
+
+            <!-- Card: BG LoFi -->
+            <div class="card" data-category="anime music youtube" onclick="openModal('bg_lofi')">
+                <img src="img/bg_lofi.png" alt="Lo-Fi BG">
+                <div class="card-info">
+                    <span class="card-tag">YouTube / Anime</span>
+                    <span class="card-id">#NST-051</span>
+                    <h2 class="card-title">Chill Beats</h2>
+                    <p class="card-desc">Lo-Fi Hip Hop系の作業用背景。</p>
                 </div>
             </div>
         </div>
