Add Business YouTube BG

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -471,6 +471,17 @@
                     <p class="card-desc">Lo-Fi Hip Hop系の作業用背景。</p>
                 </div>
             </div>
+
+            <!-- Card: BG Business -->
+            <div class="card" data-category="education youtube business" onclick="openModal('bg_business')">
+                <img src="img/bg_business.png" alt="Business BG">
+                <div class="card-info">
+                    <span class="card-tag">YouTube / Biz</span>
+                    <span class="card-id">#NST-053</span>
+                    <h2 class="card-title">Smart Explain</h2>
+                    <p class="card-desc">解説動画・ウェビナー向け背景。</p>
+                </div>
+            </div>
         </div>
     </main>
 
