Add Variety YouTube BG

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -482,6 +482,17 @@
                     <p class="card-desc">解説動画・ウェビナー向け背景。</p>
                 </div>
             </div>
+
+            <!-- Card: BG Variety -->
+            <div class="card" data-category="youtube anime" onclick="openModal('bg_variety')">
+                <img src="img/bg_variety.jpg" alt="Variety BG">
+                <div class="card-info">
+                    <span class="card-tag">YouTube / Pop</span>
+                    <span class="card-id">#NST-056</span>
+                    <h2 class="card-title">Pop Variety</h2>
+                    <p class="card-desc">バラエティ動画向け集中線。</p>
+                </div>
+            </div>
         </div>
     </main>
 
