--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -493,6 +493,17 @@
                     <p class="card-desc">バラエティ動画向け集中線。</p>
                 </div>
             </div>
+
+            <!-- Card: BG Tech -->
+            <div class="card" data-category="youtube business ec" onclick="openModal('bg_tech')">
+                <img src="img/bg_tech.png" alt="Tech BG">
+                <div class="card-info">
+                    <span class="card-tag">YouTube / Tech</span>
+                    <span class="card-id">#NST-057</span>
+                    <h2 class="card-title">Minimal Tech</h2>
+                    <p class="card-desc">ガジェットレビュー向け背景。</p>
+                </div>
+            </div>
         </div>
     </main>
 
