Add Gaming Girl asset

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -501,6 +501,17 @@
                     <p class="card-desc">ガジェットレビュー向け背景。</p>
                 </div>
             </div>
+
+            <!-- Card: Gaming Girl -->
+            <div class="card" data-category="female gadget youtube photo" onclick="openModal('gadget_gaming')">
+                <img src="img/gadget_gaming.jpg" alt="Gaming Girl">
+                <div class="card-info">
+                    <span class="card-tag">Gamer / Tech</span>
+                    <span class="card-id">#NST-061</span>
+                    <h2 class="card-title">Gaming Girl</h2>
+                    <p class="card-desc">RGBと猫耳ヘッドセットの熱狂。</p>
+                </div>
+            </div>
         </div>
     </main>
 
