Add Audio and Mobile Gadget assets

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -512,6 +512,28 @@
                     <p class="card-desc">RGBと猫耳ヘッドセットの熱狂。</p>
                 </div>
             </div>
+
+            <!-- Card: Premium Audio -->
+            <div class="card" data-category="female gadget music photo lifestyle" onclick="openModal('gadget_audio')">
+                <img src="img/gadget_audio.jpg" alt="Premium Audio">
+                <div class="card-info">
+                    <span class="card-tag">Audio / Style</span>
+                    <span class="card-id">#NST-062</span>
+                    <h2 class="card-title">Premium Sound</h2>
+                    <p class="card-desc">没入する音、都会の夕暮れ。</p>
+                </div>
+            </div>
+
+            <!-- Card: Smart Lifestyle -->
+            <div class="card" data-category="female gadget lifestyle photo" onclick="openModal('gadget_mobile')">
+                <img src="img/gadget_mobile.jpg" alt="Smart Lifestyle">
+                <div class="card-info">
+                    <span class="card-tag">Mobile / Life</span>
+                    <span class="card-id">#NST-063</span>
+                    <h2 class="card-title">Smart Lifestyle</h2>
+                    <p class="card-desc">日常を彩る最新テクノロジー。</p>
+                </div>
+            </div>
         </div>
     </main>
 
