Add VR Gadget asset

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -534,6 +534,17 @@
                     <p class="card-desc">日常を彩る最新テクノロジー。</p>
                 </div>
             </div>
+
+            <!-- Card: Future VR -->
+            <div class="card" data-category="female gadget sf tech" onclick="openModal('gadget_vr')">
+                <img src="img/gadget_vr.png" alt="Future VR">
+                <div class="card-info">
+                    <span class="card-tag">VR / Future</span>
+                    <span class="card-id">#NST-064</span>
+                    <h2 class="card-title">Future Vision</h2>
+                    <p class="card-desc">拡張現実に触れる、未来の体験。</p>
+                </div>
+            </div>
         </div>
     </main>
 
