Add Creative Tablet Gadget asset

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -545,6 +545,18 @@
                     <p class="card-desc">拡張現実に触れる、未来の体験。</p>
                 </div>
             </div>
+
+            <!-- Card: Creative Tablet -->
+            <div class="card" data-category="female gadget business lifestyle photo"
+                onclick="openModal('gadget_creative')">
+                <img src="img/gadget_creative.jpg" alt="Creative Tablet">
+                <div class="card-info">
+                    <span class="card-tag">Creative / Life</span>
+                    <span class="card-id">#NST-065</span>
+                    <h2 class="card-title">Creative Work</h2>
+                    <p class="card-desc">創造性を育む、静かな時間。</p>
+                </div>
+            </div>
         </div>
     </main>
 
