Add second Street Snap asset (Crossing Chaos)

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -349,6 +349,17 @@
                 </div>
             </div>
 
+            <!-- Card: Shibuya Grit 2 -->
+            <div class="card" data-category="street photo female lifestyle" onclick="openModal('photo_shibuya_grit_2')">
+                <img src="img/photo_shibuya_grit_2.jpg" alt="Crossing Chaos">
+                <div class="card-info">
+                    <span class="card-tag">Street / Icon</span>
+                    <span class="card-id">#NST-071</span>
+                    <h2 class="card-title">Crossing Chaos</h2>
+                    <p class="card-desc">交差点の熱気と視線。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
