Add Hiroshima Street Snap assets

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -360,6 +360,30 @@
                 </div>
             </div>
 
+            <!-- Card: Hiroshima Night 1 -->
+            <div class="card" data-category="street photo female lifestyle"
+                onclick="openModal('photo_hiroshima_night_1')">
+                <img src="img/photo_hiroshima_night_1.jpg" alt="Hiroshima Vibes">
+                <div class="card-info">
+                    <span class="card-tag">Street / Local</span>
+                    <span class="card-id">#NST-072</span>
+                    <h2 class="card-title">Hiroshima Vibes</h2>
+                    <p class="card-desc">路面電車と夜の賑わい。</p>
+                </div>
+            </div>
+
+            <!-- Card: Hiroshima Night 2 -->
+            <div class="card" data-category="street photo female lifestyle"
+                onclick="openModal('photo_hiroshima_night_2')">
+                <img src="img/photo_hiroshima_night_2.jpg" alt="Hiroshima Street">
+                <div class="card-info">
+                    <span class="card-tag">Street / Trip</span>
+                    <span class="card-id">#NST-073</span>
+                    <h2 class="card-title">Hiroshima Street</h2>
+                    <p class="card-desc">旅の空気感とローカルカラー。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
