Add Hiroshima Day Street Snap asset

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -384,6 +384,17 @@
                 </div>
             </div>
 
+            <!-- Card: Hiroshima Day -->
+            <div class="card" data-category="street photo female lifestyle" onclick="openModal('photo_hiroshima_day')">
+                <img src="img/photo_hiroshima_day.jpg" alt="Hiroshima Sunny">
+                <div class="card-info">
+                    <span class="card-tag">Street / Day</span>
+                    <span class="card-id">#NST-074</span>
+                    <h2 class="card-title">Hiroshima Sunny</h2>
+                    <p class="card-desc">晴れ渡る空と路面電車。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
