Add Shibuya Low Angle and Motion Blur assets

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -395,6 +395,28 @@
                 </div>
             </div>
 
+            <!-- Card: Shibuya Low Angle -->
+            <div class="card" data-category="street photo female cool" onclick="openModal('photo_shibuya_low')">
+                <img src="img/photo_shibuya_low.jpg" alt="Urban Power">
+                <div class="card-info">
+                    <span class="card-tag">Street / Power</span>
+                    <span class="card-id">#NST-075</span>
+                    <h2 class="card-title">Urban Power</h2>
+                    <p class="card-desc">見上げる視線、都市の圧。</p>
+                </div>
+            </div>
+
+            <!-- Card: Shibuya Blur -->
+            <div class="card" data-category="street photo female story" onclick="openModal('photo_shibuya_blur')">
+                <img src="img/photo_shibuya_blur.jpg" alt="City Motion">
+                <div class="card-info">
+                    <span class="card-tag">Street / Blur</span>
+                    <span class="card-id">#NST-076</span>
+                    <h2 class="card-title">City Motion</h2>
+                    <p class="card-desc">喧騒と静寂の狭間。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
