Add final Street Snap asset (Reflection) and update tasks

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -417,6 +417,17 @@
                 </div>
             </div>
 
+            <!-- Card: Shibuya Reflection -->
+            <div class="card" data-category="street photo female art" onclick="openModal('photo_shibuya_reflection')">
+                <img src="img/photo_shibuya_reflection.jpg" alt="Night Reflection">
+                <div class="card-info">
+                    <span class="card-tag">Street / Art</span>
+                    <span class="card-id">#NST-077</span>
+                    <h2 class="card-title">Night Reflection</h2>
+                    <p class="card-desc">光と影、反射する心。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
