Add Diversity Society asset (NST-027)

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -505,6 +505,17 @@
                 </div>
             </div>
 
+            <!-- Card: Diversity Society -->
+            <div class="card" data-category="illustration business lifestyle" onclick="openModal('diversity_society')">
+                <img src="img/diversity_society.jpg" alt="Diversity Society">
+                <div class="card-info">
+                    <span class="card-tag">Clay / CSR</span>
+                    <span class="card-id">#NST-027</span>
+                    <h2 class="card-title">共生する未来</h2>
+                    <p class="card-desc">多様性と調和を描くクレイアート。</p>
+                </div>
+            </div>
+
             <!-- Card 4: SF City -->
             <div class="card" data-category="sf illustration youtube" onclick="openModal('sf_city')">
                 <img src="img/sf_city.png" alt="SF City">
