Add Camera Girl asset (NST-078)

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -428,6 +428,17 @@
                 </div>
             </div>
 
+            <!-- Card: Camera Girl -->
+            <div class="card" data-category="photo female lifestyle gadget" onclick="openModal('photo_camera_girl')">
+                <img src="img/photo_camera_girl.jpg" alt="Snap Shooter">
+                <div class="card-info">
+                    <span class="card-tag">Camera / Pop</span>
+                    <span class="card-id">#NST-078</span>
+                    <h2 class="card-title">Snap Shooter</h2>
+                    <p class="card-desc">切り取る瞬間、写真への愛。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
