Add Camera Girl Blue asset (NST-079)

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -439,6 +439,18 @@
                 </div>
             </div>
 
+            <!-- Card: Camera Girl Blue -->
+            <div class="card" data-category="photo female lifestyle gadget"
+                onclick="openModal('photo_camera_girl_blue')">
+                <img src="img/photo_camera_girl_blue.jpg" alt="Pure Focus">
+                <div class="card-info">
+                    <span class="card-tag">Camera / Pure</span>
+                    <span class="card-id">#NST-079</span>
+                    <h2 class="card-title">Pure Focus</h2>
+                    <p class="card-desc">透明感と、レンズ越しの世界。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
