Add Beauty Ad asset (NST-080)

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -451,6 +451,17 @@
                 </div>
             </div>
 
+            <!-- Card: Beauty Ad -->
+            <div class="card" data-category="photo female business gadget" onclick="openModal('ec_beauty_ad')">
+                <img src="img/ec_beauty_ad.png" alt="UV Care Campaign">
+                <div class="card-info">
+                    <span class="card-tag">Beauty / Ad</span>
+                    <span class="card-id">#NST-080</span>
+                    <h2 class="card-title">UV Care Campaign</h2>
+                    <p class="card-desc">コスメ広告の完成形イメージ。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
