Add Luxury Beauty asset (NST-081)

--- a/imagestock/index.html
+++ b/imagestock/index.html
@@ -462,6 +462,17 @@
                 </div>
             </div>
 
+            <!-- Card: Luxury Beauty -->
+            <div class="card" data-category="photo female business gadget" onclick="openModal('ec_beauty_luxury')">
+                <img src="img/ec_beauty_luxury.jpg" alt="Luxury Essence">
+                <div class="card-info">
+                    <span class="card-tag">Beauty / Lux</span>
+                    <span class="card-id">#NST-081</span>
+                    <h2 class="card-title">Luxury Essence</h2>
+                    <p class="card-desc">極上の美と、深遠なる世界観。</p>
+                </div>
+            </div>
+
             <!-- Card 2d: Photo ramen -->
             <div class="card" data-category="photo lifestyle" onclick="openModal('photo_ramen')">
                 <img src="img/photo_ramen.jpg" alt="Photo Ramen">
